# felix

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SOUL.md  TODO.md  pyproject.toml
src/felix/: __main__.py  agent.py  llm.py  main.py  prompts.py  scratchpad.py
src/felix/tools/: finance.py  registry.py  search.py
src/felix/utils/: tokens.py
