[project]
name = "felix"
version = "0.1.0"
description = "Financial research agent powered by Yahoo Finance"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "yfinance>=0.2.40",
    "duckduckgo-search>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
felix = "felix.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
